--- a/Bind/Src/ProbarAqui.fx.yaml
+++ b/Bind/Src/ProbarAqui.fx.yaml
@@ -82,6 +82,10 @@ ProbarAqui As screen:
         Height: =32
         Items: =["Item 1", "Item 2", "Item 3"]
         Width: =320
+        RadiusBottomLeft: =25
+        RadiusBottomRight: =25
+        RadiusTopLeft: =25
+        RadiusTopRight: =25
         X: =327
         Y: =397
         ZIndex: =4
@@ -91,6 +95,10 @@ ProbarAqui As screen:
         Height: =32
         Items: =["Item 1", "Item 2", "Item 3"]
         Width: =320
+        RadiusBottomLeft: =25
+        RadiusBottomRight: =25
+        RadiusTopLeft: =25
+        RadiusTopRight: =25
         X: =327
         Y: =339
         ZIndex: =5
