--- a/Bind/CanvasManifest.json
+++ b/Bind/CanvasManifest.json
@@ -173,7 +173,6 @@
     "ModuloEquipoV1",
     "ModuloGestionEquipoV1",
     "ModuloRevisionFormatos",
-    "ModuloRevisionFormatosDetalle",
-    "ProbarAqui"
+    "ModuloRevisionFormatosDetalle"
   ]
 }
