--- a/Bind/Src/EditorState/App.editorstate.json
+++ b/Bind/Src/EditorState/App.editorstate.json
@@ -68,7 +68,7 @@
         {
           "Category": "Behavior",
           "PropertyName": "OnStart",
-          "RuleProviderType": "Unknown"
+          "RuleProviderType": "User"
         },
         {
           "Category": "Behavior",
