--- a/Bind/Src/ModuloEquipoV1.fx.yaml
+++ b/Bind/Src/ModuloEquipoV1.fx.yaml
@@ -86,6 +86,7 @@ ModuloEquipoV1 As screen:
                 _VarEquipo="MiEquipo",
                 Filter(
                     Col_TempMisEquipos, 
+                    IDGerencia <> "Ger-355B1687-6EA9-89B5-55E1-C5408DE50A63",
                     IsBlank(Cmb_FiltroNombre_12.Selected.'Equipo/Squad') || 'Equipo/Squad' = Cmb_FiltroNombre_12.Selected.'Equipo/Squad', 
                     IsBlank(Cmb_FiltroJefePO_7.Selected.Claims) || ResponsableEquipo = Last(ForAll(Split(First(ForAll(Split(Cmb_FiltroJefePO_7.Selected.Claims,"@"), {Result: ThisRecord.Value})).Result,"|"), {Result: ThisRecord.Value})).Result),
             
@@ -679,7 +680,7 @@ ModuloEquipoV1 As screen:
     Button25_1 As button:
         DisplayMode: |-
             =If(
-                  _VarRolUsuario in Col_RolVirtual.Rol,
+                  _VarUsuarioJefe in Col_UserPermiso.User || _VarRolUsuario = "ENGINEERING MANAGER III",
                   DisplayMode.Edit,
                   DisplayMode.Disabled
             )
