--- a/Bind/Src/MantenedoresFCST.fx.yaml
+++ b/Bind/Src/MantenedoresFCST.fx.yaml
@@ -1650,7 +1650,7 @@ MantenedoresFCST As screen:
                     Default: =LookUp(Col_BD_Fcst_Ceco, Ceco = LookUp(Col_BD_FCST_ServicioCuentaCeco, IDServicio = ThisItem.IDServicio, Ceco))
                     DefaultSelectedItems: =LookUp(Col_BD_Fcst_Ceco, Ceco = LookUp(Col_BD_FCST_ServicioCuentaCeco, IDServicio = ThisItem.IDServicio, Ceco))
                     DisabledColor: =RGBA(53, 61, 63, 1)
-                    DisplayFields: =["Ceco"]
+                    DisplayFields: =["Ceco","NombreCeco"]
                     DisplayMode: |
                         =If(
                             ThisItem.Editando && IsBlank(LookUp(Col_BD_Fcst_Ceco, Ceco = LookUp(Col_BD_FCST_ServicioCuentaCeco, IDServicio = ThisItem.IDServicio, Ceco))),
@@ -1680,7 +1680,7 @@ MantenedoresFCST As screen:
                     Default: =LookUp(Col_BD_Fcst_Cuenta, Cuenta = LookUp(Col_BD_FCST_ServicioCuentaCeco, IDServicio = ThisItem.IDServicio, Cuenta))
                     DefaultSelectedItems: =LookUp(Col_BD_Fcst_Cuenta, Cuenta = LookUp(Col_BD_FCST_ServicioCuentaCeco, IDServicio = ThisItem.IDServicio, Cuenta))
                     DisabledColor: =RGBA(53, 61, 63, 1)
-                    DisplayFields: =["ComplianceAssetId"]
+                    DisplayFields: =["Cuenta","NombreCuenta"]
                     DisplayMode: |
                         =If(
                             ThisItem.Editando && IsBlank(LookUp(Col_BD_Fcst_Cuenta, Cuenta = LookUp(Col_BD_FCST_ServicioCuentaCeco, IDServicio = ThisItem.IDServicio, Cuenta))),
@@ -1696,8 +1696,8 @@ MantenedoresFCST As screen:
                     Items: =Col_BD_Fcst_Cuenta
                     OnSelect: =Select(Parent)
                     Reset: =_VarResetCtrlSer
-                    SearchFields: =["ComplianceAssetId"]
-                    SearchItems: =Search(Col_BD_Fcst_Cuenta,Cmb_CuentaNuevo.SearchText,"ComplianceAssetId")
+                    SearchFields: =["Cuenta"]
+                    SearchItems: =Search(Col_BD_Fcst_Cuenta,Cmb_CuentaNuevo.SearchText,"Cuenta")
                     SelectMultiple: =false
                     Size: =11
                     Template: =ListItemTemplate.Double
@@ -1952,7 +1952,7 @@ MantenedoresFCST As screen:
                 Cmb_InputDataNuevo As combobox:
                     Default: =LookUp(Col_BD_Fcst_Responsable, IDInputData = ThisItem.Usuario)
                     DefaultSelectedItems: =LookUp(Col_BD_Fcst_Responsable, IDInputData = ThisItem.Usuario)
-                    DisplayFields: =["ComplianceAssetId"]
+                    DisplayFields: =["InputData","IDInputData"]
                     DisplayMode: |-
                         =If(
                             ThisItem.Editando,
@@ -1963,8 +1963,8 @@ MantenedoresFCST As screen:
                     Items: =Lst_Fcst_Responsable
                     OnSelect: =Select(Parent)
                     Reset: =_VarResetCtrlSer
-                    SearchFields: =["ComplianceAssetId"]
-                    SearchItems: =Search(Lst_Fcst_Responsable,Cmb_InputDataNuevo.SearchText,"ComplianceAssetId")
+                    SearchFields: =["InputData"]
+                    SearchItems: =Search(Lst_Fcst_Responsable,Cmb_InputDataNuevo.SearchText,"InputData")
                     SelectMultiple: =false
                     Size: =11
                     Template: =ListItemTemplate.Double
