--- a/Bind/Src/ModuloRevisionFormatos.fx.yaml
+++ b/Bind/Src/ModuloRevisionFormatos.fx.yaml
@@ -351,9 +351,9 @@ ModuloRevisionFormatos As screen:
                 Text: |-
                     =If(Label15_137.Text="0","No Aplica",
                     If(
-                    IsBlank(Last(Filter(Col_CargueCertificadosF30,ID_Proveedor=Text(ThisItem.ID)&& Mes=Cmb_FiltroNombre_13.Selected.Value && Anio=Cmb_FiltroNombre_14.Selected.Value && Certificado="F30")).Estado.Value),
+                    IsBlank(Last(Filter(Col_CargueCertificadosF30,Estado.Value<>"Reemplazado"&& ID_Proveedor=Text(ThisItem.ID)&& Mes=Cmb_FiltroNombre_13.Selected.Value && Anio=Cmb_FiltroNombre_14.Selected.Value && Certificado="F30")).Estado.Value),    
                     "Pendiente",
-                    Last(Filter(Col_CargueCertificadosF30,ID_Proveedor=Text(ThisItem.ID)&& Mes=Cmb_FiltroNombre_13.Selected.Value && Anio=Cmb_FiltroNombre_14.Selected.Value && Certificado="F30")).Estado.Value
+                    Last(Filter(Col_CargueCertificadosF30,Estado.Value<>"Reemplazado"&&ID_Proveedor=Text(ThisItem.ID)&& Mes=Cmb_FiltroNombre_13.Selected.Value && Anio=Cmb_FiltroNombre_14.Selected.Value && Certificado="F30")).Estado.Value
                     ))
                 Width: =145
                 X: =985
@@ -389,9 +389,9 @@ ModuloRevisionFormatos As screen:
                 Text: |-
                     =If(Label15_137.Text="0","No Aplica",
                     If(
-                    IsBlank(Last(Filter(Col_CargueCertificadosF30,ID_Proveedor=Text(ThisItem.ID)&& Mes=Cmb_FiltroNombre_13.Selected.Value && Anio=Cmb_FiltroNombre_14.Selected.Value && Certificado="F30-1")).Estado.Value),
+                    IsBlank(Last(Filter(Col_CargueCertificadosF30,Estado.Value<>"Reemplazado"&&ID_Proveedor=Text(ThisItem.ID)&& Mes=Cmb_FiltroNombre_13.Selected.Value && Anio=Cmb_FiltroNombre_14.Selected.Value && Certificado="F30-1")).Estado.Value),
                     "Pendiente",
-                    Last(Filter(Col_CargueCertificadosF30,ID_Proveedor=Text(ThisItem.ID)&& Mes=Cmb_FiltroNombre_13.Selected.Value && Anio=Cmb_FiltroNombre_14.Selected.Value && Certificado="F30-1")).Estado.Value
+                    Last(Filter(Col_CargueCertificadosF30,Estado.Value<>"Reemplazado"&&ID_Proveedor=Text(ThisItem.ID)&& Mes=Cmb_FiltroNombre_13.Selected.Value && Anio=Cmb_FiltroNombre_14.Selected.Value && Certificado="F30-1")).Estado.Value
                     ))
                 Width: =149
                 X: =1137
@@ -418,8 +418,8 @@ ModuloRevisionFormatos As screen:
                     )
                 Text: |-
                     =If(Label15_129.Text="0 Personas","No Aplica",
-                    If(IsBlank(LookUp(Col_CargueCertificadosF30,RUT=Label15_130.Text&& Certificado="Consentimiento Extranjeros",Estado).Value),"Pendiente",
-                    LookUp(Col_CargueCertificadosF30,RUT=Label15_130.Text&& Certificado="Consentimiento Extranjeros",Estado).Value))
+                    If(IsBlank(LookUp(Col_CargueCertificadosF30,Estado.Value<>"Reemplazado"&&ID_Proveedor=Text(ThisItem.ID)&& Certificado="Consentimiento Extranjeros",Estado).Value),"Pendiente",
+                    LookUp(Col_CargueCertificadosF30,Estado.Value<>"Reemplazado"&&ID_Proveedor=Text(ThisItem.ID)&& Certificado="Consentimiento Extranjeros",Estado).Value))
                 Width: =170
                 X: =1433
                 Y: =7
@@ -460,7 +460,6 @@ ModuloRevisionFormatos As screen:
                 Height: =47
                 Text: |-
                     =CountRows(Filter(Col_BD_Persona,ID_Proveedor=Text(ThisItem.ID),'Interno/Externo'="Externo"&& 'Ubicación Laboral'.Value="Chile" && GerenciaOrigen_0="GERENCIA TECNOLOGIA"))
-                    
                     //CountRows(Filter(Lst_UsuariosCargadosF30;ID_Documento=LookUp(Col_CargueCertificadosF30;RUT=Label15_75.Text&& Mes=Cmb_FiltroNombre_10.Selected.Value && Anio=Cmb_FiltroNombre_11.Selected.Value && Certificado="F30-1").ID)))
                 Width: =55
                 X: =1357
